fixed spacing on splash page

--- a/css/splashpage.css
+++ b/css/splashpage.css
@@ -60,5 +60,7 @@ video {
     border-color: #D8403A;    
 }
 
-
+.container-fluid {
+    
+}
 
